# automata-sgx-sdk

./: .gitmodules  Cargo.toml  README.md  build.rs  build_dep.rs
build-script/: Cargo.toml  build.rs
build-script/src/: builders.rs  cutils.rs  env.rs  lib.rs  sgx_app.rs  std_app.rs
docker/: docker-compose.yaml  ubuntu-20.04.Dockerfile  ubuntu-22.04.Dockerfile
edl/: sgx_dcap.edl
src/: builders.rs  cutils.rs  env.rs  lib.rs  patch.rs  sgxlib.rs  types.rs
src/app/: enclave.rs  mod.rs  untrusted.rs
src/dcap/: mod.rs  trusted.rs  untrusted.rs
sysroot/: Cargo.toml  build.rs
sysroot/src/: main.rs
