[package]
name = "automata-sgx-builder"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

[features]
builder = []
sysroot = []
sgx_libc = ["dep:sgx_libc"]
sgx_types = []
sgx_urts = ["dep:sgx_urts"]
sgx_alloc = ["dep:sgx_alloc"]
sgx_crypto = ["dep:sgx_crypto"]
sgx_dcap_ra_msg = ["dep:sgx_dcap_ra_msg"]
sgx_dcap_tkey_exchange = ["dep:sgx_dcap_tkey_exchange"]
sgx_dcap_tvl = ["dep:sgx_dcap_tvl"]
sgx_demangle = ["dep:sgx_demangle"]
sgx_edl = ["dep:sgx_edl"]
sgx_ffi = ["dep:sgx_ffi"]
sgx_ukey_exchange = ["dep:sgx_ukey_exchange"]
sgx_tkey_exchange = ["dep:sgx_tkey_exchange"]
sgx_ra_msg = ["dep:sgx_ra_msg"]
sgx_no_tstd = ["dep:sgx_no_tstd"]
sgx_rand = ["dep:sgx_rand"]
sgx_trts = ["dep:sgx_trts"]

[dependencies]
cc = { version = "1.1.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
automata-sgx-builder-sysroot = { path = "sysroot" }

sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08" }
sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_crypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_dcap_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_dcap_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_dcap_tvl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_edl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_ffi = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_ukey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_no_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }

[workspace]
resolver = "2"
members = [
    "sysroot",
]