[package]
name = "automata-sgx-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

[package.metadata]
rust-toolchain = "nightly-2024-02-01"
target = "x86_64-automata-linux-sgx"
intel-sgx-sdk = "2.24.100"

[features]
default = ["sgx_types"]
tstd_enclave = ["dcap", "sgx_trts", "sgx_types", "sgx_libc_pthread", "patch_rand", "patch_assert_fail"]
tstd_app = ["dcap", "sgx_types", "sgx_urts", "app"]
builder = ["dep:automata-build-script"]
sysroot = []
dcap = ["dep:sgx-dcap-ql-rs"]
app = []
patch_rand = ["dummy_pthread_atfork"]
patch_assert_fail = ["sgx_libc"]
dummy_pthread_atfork = []

sgx_libc = ["dep:sgx_libc"]
sgx_libc_pthread = ["sgx_libc", "sgx_libc/pthread"]
sgx_urts = ["dep:sgx_urts"]
sgx_alloc = ["dep:sgx_alloc"]
sgx_crypto = ["dep:sgx_crypto"]
sgx_demangle = ["dep:sgx_demangle"]
sgx_edl = ["dep:sgx_edl"]
sgx_ffi = ["dep:sgx_ffi"]
sgx_rand = ["dep:sgx_rand"]
sgx_types = []
sgx_trts = []
sgx_unwind = ["dep:sgx_unwind"]

[dependencies]
cc = { version = "1.1.5" }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "1"
ctor = "0.2"
automata-build-script = { path = "build-script", optional = true }
base = { git = "https://github.com/automata-network/base-rs" }

sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_crypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_edl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_ffi = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01", optional = true }
sgx-dcap-ql-rs = { git = "https://github.com/automata-network/SGXDataCenterAttestationPrimitives.git", branch = "automata_sgx_builder", optional = true }

[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
automata-sgx-sdk-sysroot = { path = "sysroot" }
sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.24_nightly_2024-02-01" }

[workspace]
resolver = "2"
members = [
    "sysroot",
    "build-script"
]
